# WASI-NN_Multitenacy_Profiling

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
python_codes/: call copy.py  call.py  get_fixture.py  monitor.py  monitor_multy_server.py  resource_monitor.py
server/: Cargo.toml
server/src/: main.rs  runtime.rs
wasm/hello/src/: main.rs
wasm/llm/: Cargo.toml
wasm/llm/src/: main.rs
