[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.8.0", features = ["full"] }
tokio-macros = "2.6.0"
warp = { version = "0.4.2", features = ["server"] }
wasmtime = "37.0.0"
wasmtime-wasi = "37.0.0"
wasmtime-wasi-nn = { version = "37.0.0", features = ["pytorch"] }