[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.49", features = ["derive"] }
clap_derive = "4.5.49"
env_logger = "0.11.8"
log = "0.4.28"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.8.0", features = ["full"] }
tokio-macros = "2.6.0"
warp = { version = "0.4.2", features = ["server"] }
wasi-common = "37.0.2"
wasmtime = "37.0.0"
wasmtime-wasi = "37.0.0"
wasmtime-wasi-nn = { version = "37.0.0", features = ["pytorch"] }
